fix for Card Width too small

--- a/src/elements/Card/Card.module.css
+++ b/src/elements/Card/Card.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     background: #F6F5FA;
-    width: 50%;
+    width: 100%;
     max-width: 280px;
     height: 50%;
     max-height: 400px;
